  to correct for is estimated by number of genes times number of independent SNPs 
  per locus.
o Added the option to set for the individual level expression threshold a percentage
  threshold (expressed in x% of the cells for the individual and cell type) instead of the 
  absolute threshold (expressed with > x counts in sum for the individual and cell type)
  using the parameter "cutoffVersion". Additionally, it is now also possible to set for
  the population level expression threshold an absolute cutoff (expressed in > x of
  individuals) instead of the percentage threshold (expressed in > x% of the individuals) 
  by setting the value of "perc.indiv.expr" to a number greater or equal than 1.
o Added a function to optimize the UMI count threshold for 
o Improved shiny app layout (also visible in our website at scpower.helmholtz-muenchen.de
 

CHANGES IN VERSION 0.1.2
-------------------------

o Corrected bug for simulated eQTL power (significance parameter not processed correctly)
o Added the parameter "simThreshold" to define the maximal mean threshold for simulation
  the eQTL power (default 4)
o Changed default value of parameter "useSimulatedPower" to FALSE for budget optimization
  (this speeds the calculations significantly with no large effects on the optimal
  parameter combinations). The functions starting with "optimize.constant.budget" are
  affected.
o Removed the DESeq dependency by implementing the required methods within scPower (using
  exactly the DESeq approach), as DESeq is deprecated on Bioconductor
  

CHANGES IN VERSION 0.1.1
-------------------------

o Added FDR as additional multiple testing option
o Increased power accuracy of eQTL genes with small mean values by simulation (option can 
  be turned off to speed up calculations)
o Option to skip power calculation of genes with very little expression probability to 
  speed up overall power calculation

