@@ -41,6 +41,7 @@ export(sample.mean.values.random)
 export(sampleSizeBudgetCalculation)
 export(sampleSizeBudgetCalculation.libPrepCell)
 export(sampleSizeBudgetCalculation.restrictedDoublets)
+export(select.cutoffs)
 export(umi.gamma.relation)
 export(umi.read.relation)
 export(uniform.ranks.interval)
